# saas_foundation

./: .gitignore  GEMINI.md  LICENSE.md  README.md  main.py  pyproject.toml
docs/: application_requirements.md  usage.md
src/authorization/: manager.py
src/datastore/: dao.py  database.py  manager.py  schema.py
src/email_services/: __init__.py  manager.py
src/logging_system/: manager.py
src/multi_tenant/: manager.py  models.py
src/payment_gateway/: manager.py  stripe_adapter.py
src/saas_foundation/: __init__.py  manager.py
src/saas_foundation/authorization/: manager.py
src/saas_foundation/datastore/: dao.py  database.py  manager.py  schema.py
src/saas_foundation/email_services/: __init__.py  manager.py
src/saas_foundation/logging_system/: manager.py
src/saas_foundation/multi_tenant/: manager.py  models.py
src/saas_foundation/payment_gateway/: base.py  manager.py  stripe_adapter.py
src/saas_foundation/subscription/: manager.py  models.py
src/subscription/: manager.py  models.py
src/templating/: __init__.py  manager.py
src/web_service/: __init__.py  app.py  auth.py  dependencies.py
src/web_service/routes/: public.py
templates/email/: forgot_password.html  forgot_password.txt
templates/public/: login.html  logout.html  pricing.html  signup.html
tests/: test_authorization.py  test_authorization_rbac.py  test_datastore.py  test_email_services.py  test_multi_tenant.py  test_payment_gateway.py  test_saas_manager.py  test_subscription.py  test_web_service.py
