[project]
name = "foundation"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "bcrypt>=4.3.0",
    "fastapi>=0.116.1",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "passlib>=1.7.4",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "python-jose[cryptography]>=3.5.0",
    "stripe>=12.4.0",
    "uvicorn>=0.35.0",
]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pylint.'MASTER']
disable = [
    "C0330", # Wrong hanging indentation before block
    "C0301", # Line too long
    "R0903", # Too few public methods
    "R0913", # Too many arguments
    "W0613", # Unused argument
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116"  # Missing function or method docstring
]

[tool.pylint."src.logging_system"]
disable = [
    "C0114", # Missing module docstring
    "C0115", # Missing class docstring
    "C0116"  # Missing function or method docstring
]

[tool.pytest.ini_options]
python_files = "test_*.py"
python_classes = "Test"
python_functions = "test_"



